8225789: Empty method parameter type should generate ClassFormatError

Check for an empty name when verifying unqualified names

Reviewed-by: lfoltan, coleenp